fix: Restore .html extensions, all links use clean URLs

--- a/404.html
+++ b/404.html
@@ -32,12 +32,12 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html#services">Services</a></li>
-                        <li><a href="index.html#provo-services">Provo Office</a></li>
-                        <li><a href="index.html#rural-services">Rural Services</a></li>
-                        <li><a href="index.html#about">About Us</a></li>
-                        <li><a href="index.html#telehealth">TeleHealth</a></li>
+                        <li><a href="index">Home</a></li>
+                        <li><a href="index#services">Services</a></li>
+                        <li><a href="index#provo-services">Provo Office</a></li>
+                        <li><a href="index#rural-services">Rural Services</a></li>
+                        <li><a href="index#about">About Us</a></li>
+                        <li><a href="index#telehealth">TeleHealth</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a></li>
                     </ul>
                 </nav>
@@ -52,7 +52,7 @@
                 <h1>Page Not Found</h1>
                 <p>We're sorry, but the page you're looking for doesn't exist or has been moved.</p>
                 <div class="cta-buttons">
-                    <a href="index.html" class="btn">Return Home</a>
+                    <a href="index" class="btn">Return Home</a>
                     <a href="tel:3855041334" class="btn btn-secondary">Call Us</a>
                 </div>
             </div>
@@ -71,9 +71,9 @@
                 <div class="footer-links">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="index.html#services">Services</a></li>
-                        <li><a href="index.html#about">About Us</a></li>
-                        <li><a href="index.html#telehealth">TeleHealth</a></li>
+                        <li><a href="index#services">Services</a></li>
+                        <li><a href="index#about">About Us</a></li>
+                        <li><a href="index#telehealth">TeleHealth</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a></li>
                     </ul>
                 </div>
