--- a/test.html
+++ b/test.html
@@ -25,26 +25,26 @@
         <div class="header-main">
             <div class="container">
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="index">
                         <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
                     </a>
                 </div>
                 <nav class="main-nav">
                     <ul class="nav-items">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index">Home</a></li>
                         <li class="dropdown">
                             <a href="index.html#services" class="active">Services</a>
                             <ul class="dropdown-menu">
-                                <li><a href="adhd.html">ADHD Testing & Treatment</a></li>
-                                <li><a href="anxiety.html">Anxiety Treatment</a></li>
-                                <li><a href="depression.html">Depression Treatment</a></li>
-                                <li><a href="ptsd.html">PTSD Treatment</a></li>
+                                <li><a href="adhd">ADHD Testing & Treatment</a></li>
+                                <li><a href="anxiety">Anxiety Treatment</a></li>
+                                <li><a href="depression">Depression Treatment</a></li>
+                                <li><a href="ptsd">PTSD Treatment</a></li>
                             </ul>
                         </li>
-                        <li><a href="provo.html">Provo Office</a></li>
-                        <li><a href="rural.html">Rural Services</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="telehealth.html">TeleHealth</a></li>
+                        <li><a href="provo">Provo Office</a></li>
+                        <li><a href="rural">Rural Services</a></li>
+                        <li><a href="about">About Us</a></li>
+                        <li><a href="telehealth">TeleHealth</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon">Patient Portal</a></li>
                     </ul>
                 </nav>
