fix: Add favicon links to all HTML pages

--- a/about.html
+++ b/about.html
@@ -20,6 +20,11 @@
     </script>
     
     <link rel="stylesheet" href="styles.css">
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/ap-new-color-logo.png">
+    <link rel="apple-touch-icon" href="assets/ap-new-color-logo.png">
+    <link rel="shortcut icon" href="assets/ap-new-color-logo.png">
   </head>
   <body>
     <!-- Header -->
