--- a/provo.html
+++ b/provo.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="config.js"></script>
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/ap-new-color-logo.png">
+    <link rel="apple-touch-icon" href="assets/ap-new-color-logo.png">
+    <link rel="shortcut icon" href="assets/ap-new-color-logo.png">
+    
     <!-- Google Analytics 4 -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LKYXFGGJSP"></script>
     <script>
