--- a/telehealth.html
+++ b/telehealth.html
@@ -15,6 +15,11 @@
     />
     <script src="config.js"></script>
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/ap-new-color-logo.png">
+    <link rel="apple-touch-icon" href="assets/ap-new-color-logo.png">
+    <link rel="shortcut icon" href="assets/ap-new-color-logo.png">
+    
     <!-- Google Analytics 4 -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LKYXFGGJSP"></script>
     <script>
