--- a/adhd.html
+++ b/adhd.html
@@ -18,8 +18,9 @@
     <link rel="canonical" href="https://allenpsychiatry.net/adhd"">
     
     <!-- Favicon -->
-    <!-- <link rel="icon" type="image/png" href="assets/favicon.png"> -->
-    <!-- <link rel="apple-touch-icon" href="assets/favicon.png"> -->
+    <link rel="icon" type="image/png" href="assets/ap-new-color-logo.png">
+    <link rel="apple-touch-icon" href="assets/ap-new-color-logo.png">
+    <link rel="shortcut icon" href="assets/ap-new-color-logo.png">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
