--- a/telehealth.html
+++ b/telehealth.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Allen Psychiatry offers secure and convenient telehealth services, bringing expert mental health care to you, wherever you are in Utah." />
+    <meta name="keywords" content="Allen Psychiatry, Allen Mental Health, telehealth psychiatry Utah, online mental health appointments, virtual psychiatric services, telehealth mental health, remote psychiatric care, online therapy Utah, virtual mental health care, telehealth ADHD treatment, telehealth anxiety treatment, telehealth depression treatment, telehealth PTSD treatment, online psychiatric evaluation, telehealth medication management, mental health counseling online, psychiatric consultation telehealth, mental wellness telehealth, behavioral health telehealth, compassionate mental health care, secure telehealth, convenient mental health care, mental health treatment telehealth">
     <title>Telehealth Services - Allen Psychiatry</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
