--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Dr. Todd Allen - Allen Psychiatry</title>
+    <meta name="description" content="Meet Dr. Todd Allen, board-certified psychiatrist at Allen Psychiatry. Providing compassionate, personalized mental health care in Provo, Utah County, and rural Utah communities. Expert in ADHD, anxiety, depression, and PTSD treatment.">
+    <meta name="keywords" content="Allen Psychiatry, Allen Mental Health, Dr. Todd Allen, board-certified psychiatrist Provo, psychiatrist Utah County, mental health professional, psychiatric services Provo, mental health care Utah, compassionate mental health care, personalized psychiatric care, mental health treatment, psychiatric evaluation, mental wellness, behavioral health, Provo mental health, Orem mental health, Lehi mental health, Spanish Fork mental health, American Fork mental health, Springville mental health, Pleasant Grove mental health, Payson mental health, Saratoga Springs mental health, Eagle Mountain mental health, Utah County psychiatric care, Sevier County psychiatric care, rural mental health Utah">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
