--- a/provo.html
+++ b/provo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Visit our Provo, UT office for compassionate and expert mental health care. Dr. Todd Allen offers ADHD treatment, anxiety therapy, and more in a welcoming environment.">
+    <meta name="keywords" content="Allen Psychiatry, Allen Mental Health, Provo psychiatrist, Provo mental health, psychiatric services Provo, mental health clinic Provo, psychiatrist near me Provo, mental health care Provo, ADHD treatment Provo, anxiety treatment Provo, depression treatment Provo, PTSD treatment Provo, psychiatric evaluation Provo, medication management Provo, mental health counseling Provo, psychiatric consultation Provo, mental wellness Provo, behavioral health Provo, compassionate mental health care, Utah County psychiatric care, local psychiatrist Provo">
     <title>Provo, UT Office - Allen Psychiatry</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
