fix: Syntax errors, clean URLs, padding adjustments, and canonical URL fixes
- Fixed duplicate main tags in adhd.html and telehealth.html
- Removed .html from all schema markup URLs
- Fixed canonical URL syntax errors (double quotes)
- Reduced padding throughout site (50% reduction in CTA sections)
- Verified all URLs are clean (no .html)
- All accessibility landmarks in place
- Security headers configured

--- a/404.html
+++ b/404.html
@@ -50,6 +50,7 @@
         </div>
     </header>
 
+    <main>
     <!-- 404 Content -->
     <section class="hero service-hero">
         <div class="container">
@@ -63,6 +64,7 @@
             </div>
         </div>
     </section>
+    </main>
 
     <!-- Footer -->
     <footer>
