--- a/anxiety.html
+++ b/anxiety.html
@@ -15,7 +15,7 @@
     <meta name="revisit-after" content="7 days">
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://allenpsychiatry.net/anxiety"">
+    <link rel="canonical" href="https://allenpsychiatry.net/anxiety">
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/ap-new-color-logo.png">
@@ -50,7 +50,7 @@
         "@type": "MedicalTherapy",
         "name": "Anxiety Treatment",
         "description": "Expert anxiety treatment services in Provo, UT",
-        "url": "https://allenpsychiatry.net/anxiety.html",
+        "url": "https://allenpsychiatry.net/anxiety",
         "provider": {
             "@type": "MedicalOrganization",
             "name": "Allen Psychiatry",
