--- a/depression.html
+++ b/depression.html
@@ -15,7 +15,7 @@
     <meta name="revisit-after" content="7 days">
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://allenpsychiatry.net/depression"">
+    <link rel="canonical" href="https://allenpsychiatry.net/depression">
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/ap-new-color-logo.png">
@@ -50,7 +50,7 @@
         "@type": "MedicalTherapy",
         "name": "Depression Treatment",
         "description": "Comprehensive depression treatment and medication management services in Provo, Utah",
-        "url": "https://allenpsychiatry.net/depression.html",
+        "url": "https://allenpsychiatry.net/depression",
         "provider": {
             "@type": "MedicalOrganization",
             "name": "Allen Psychiatry",
