--- a/ptsd.html
+++ b/ptsd.html
@@ -15,7 +15,7 @@
     <meta name="revisit-after" content="7 days">
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://allenpsychiatry.net/ptsd"">
+    <link rel="canonical" href="https://allenpsychiatry.net/ptsd">
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/ap-new-color-logo.png">
@@ -50,7 +50,7 @@
         "@type": "MedicalTherapy",
         "name": "PTSD Treatment",
         "description": "Comprehensive PTSD treatment and trauma therapy services in Provo, Utah",
-        "url": "https://allenpsychiatry.net/ptsd.html",
+        "url": "https://allenpsychiatry.net/ptsd",
         "provider": {
             "@type": "MedicalOrganization",
             "name": "Allen Psychiatry",
