--- a/rural.html
+++ b/rural.html
@@ -133,6 +133,7 @@
         </div>
     </header>
 
+    <main>
     <div class="breadcrumbs">
         <div class="container">
             <ul>
@@ -251,6 +252,7 @@
             </div>
         </div>
     </section>
+    </main>
 
     <!-- Footer -->
     <footer>
