--- a/about.html
+++ b/about.html
@@ -77,6 +77,7 @@
         </div>
     </header>
 
+    <main>
     <!-- Hero Section -->
     <section class="hero hero-about">
         <div class="container">
