--- a/adhd.html
+++ b/adhd.html
@@ -15,7 +15,7 @@
     <meta name="revisit-after" content="7 days">
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://allenpsychiatry.net/adhd"">
+    <link rel="canonical" href="https://allenpsychiatry.net/adhd">
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/ap-new-color-logo.png">
@@ -50,7 +50,7 @@
         "@type": "MedicalTherapy",
         "name": "ADHD Testing and Treatment",
         "description": "Comprehensive ADHD testing, diagnosis, and treatment services for adults and adolescents in Provo, Utah",
-        "url": "https://allenpsychiatry.net/adhd.html",
+        "url": "https://allenpsychiatry.net/adhd",
         "provider": {
             "@type": "MedicalOrganization",
             "name": "Allen Psychiatry",
@@ -267,6 +267,7 @@
         </div>
     </header>
 
+    <main>
     <div class="breadcrumbs">
         <div class="container">
             <ul>
@@ -287,7 +288,6 @@
     </section>
 
     <!-- Main Content -->
-    <main>
         <section class="page-content">
             <div class="container">
                 <div class="service-content">
