--- a/provo.html
+++ b/provo.html
@@ -85,6 +85,7 @@
         </div>
     </div>
 
+    <main>
     <!-- Hero Section -->
     <section class="hero hero-provo">
         <div class="container">
@@ -212,6 +213,7 @@
             </div>
         </div>
     </section>
+    </main>
 
     <!-- Footer -->
     <footer>
