--- a/anxiety.html
+++ b/anxiety.html
@@ -212,16 +212,16 @@
                         <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
                     </a>
                 </div>
-                <nav class="main-nav">
+                <nav class="main-nav" aria-label="Main navigation">
                     <ul class="nav-items">
                         <li><a href="/">Home</a></li>
                         <li class="dropdown">
-                            <a href="/#services" class="active">Services</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/adhd">ADHD Testing & Treatment</a></li>
-                                <li><a href="/anxiety">Anxiety Treatment</a></li>
-                                <li><a href="/depression">Depression Treatment</a></li>
-                                <li><a href="/ptsd">PTSD Treatment</a></li>
+                            <a href="/#services" class="active" aria-haspopup="true" aria-expanded="false">Services</a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li role="menuitem"><a href="/adhd">ADHD Testing & Treatment</a></li>
+                                <li role="menuitem"><a href="/anxiety">Anxiety Treatment</a></li>
+                                <li role="menuitem"><a href="/depression">Depression Treatment</a></li>
+                                <li role="menuitem"><a href="/ptsd">PTSD Treatment</a></li>
                             </ul>
                         </li>
                         <li><a href="/provo">Provo Office</a></li>
@@ -231,9 +231,9 @@
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
                     </ul>
                 </nav>
-                <div class="hamburger-menu">
-                    <i class="fa fa-bars"></i>
-                </div>
+                <button class="hamburger-menu" aria-label="Toggle mobile menu" aria-expanded="false" type="button">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </button>
             </div>
         </div>
     </header>
@@ -250,7 +250,7 @@
 
     <!-- Service Hero Section -->
     <section class="service-hero">
-        <img src="assets/anxiety2.jpg" alt="Abstract image representing anxiety" class="hero-image">
+        <img src="assets/anxiety2.jpg" alt="Therapeutic session for anxiety treatment at Allen Psychiatry in Provo, Utah" class="hero-image">
         <div class="container">
             <h1>Anxiety Treatment</h1>
             <p>Expert care for anxiety, panic attacks, and related conditions</p>
@@ -263,14 +263,14 @@
             <div class="container">
                 <div class="service-content">
                     <div class="clinical-callout">
-                        <h4>Professional Anxiety Treatment in Utah</h4>
+                        <h2>Professional Anxiety Treatment in Utah</h2>
                         <p>At Allen Psychiatry, we understand that anxiety is more than just occasional nervousness; it can be an overwhelming and disruptive force in your life. That's why we're here at Allen Psychiatry: we provide comprehensive anxiety treatment.</p>
                     </div>
                     
                     <p>If you want to learn more about treatment for anxiety, please call <strong>(385) 504-1334</strong> or <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">schedule an appointment online</a>. We are here to help you through life's most difficult challenges.</p>
 
-                    <h2>Understanding Anxiety</h2>
-                    <h3>What is Anxiety?</h3>
+                    <h3>Understanding Anxiety</h3>
+                    <h4>What is Anxiety?</h4>
                     <p>Adult anxiety is a common mental health condition characterized by persistent and excessive worry, fear, or nervousness. It can interfere with daily activities, work, and relationships. While some anxiety is normal and even helpful in certain situations, excessive anxiety can become debilitating and require professional intervention.</p>
 
                     <div class="clinical-summary">
