--- a/depression.html
+++ b/depression.html
@@ -216,16 +216,16 @@
                         <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
                     </a>
                 </div>
-                <nav class="main-nav">
+                <nav class="main-nav" aria-label="Main navigation">
                     <ul class="nav-items">
                         <li><a href="/">Home</a></li>
                         <li class="dropdown">
-                            <a href="/#services" class="active">Services</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/adhd">ADHD Testing & Treatment</a></li>
-                                <li><a href="/anxiety">Anxiety Treatment</a></li>
-                                <li><a href="/depression">Depression Treatment</a></li>
-                                <li><a href="/ptsd">PTSD Treatment</a></li>
+                            <a href="/#services" class="active" aria-haspopup="true" aria-expanded="false">Services</a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li role="menuitem"><a href="/adhd">ADHD Testing & Treatment</a></li>
+                                <li role="menuitem"><a href="/anxiety">Anxiety Treatment</a></li>
+                                <li role="menuitem"><a href="/depression">Depression Treatment</a></li>
+                                <li role="menuitem"><a href="/ptsd">PTSD Treatment</a></li>
                             </ul>
                         </li>
                         <li><a href="/provo">Provo Office</a></li>
@@ -235,9 +235,9 @@
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
                     </ul>
                 </nav>
-                <div class="hamburger-menu">
-                    <i class="fa fa-bars"></i>
-                </div>
+                <button class="hamburger-menu" aria-label="Toggle mobile menu" aria-expanded="false" type="button">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </button>
             </div>
         </div>
     </header>
@@ -254,7 +254,7 @@
 
     <!-- Service Hero Section -->
     <section class="service-hero">
-        <img src="assets/depression.jpg" alt="Abstract image representing depression" class="hero-image">
+        <img src="assets/depression.jpg" alt="Supportive depression treatment and mental health care at Allen Psychiatry in Provo, Utah" class="hero-image">
         <div class="container">
             <h1>Depression Treatment</h1>
             <p>Compassionate care to help you find hope and healing</p>
@@ -267,14 +267,14 @@
             <div class="container">
                 <div class="service-content">
                     <div class="clinical-callout">
-                        <h4>Professional Depression Treatment in Provo, Utah</h4>
+                        <h2>Professional Depression Treatment in Provo, Utah</h2>
                         <p>Depression can feel overwhelming, but you don't have to go through it alone. Dr. Todd Allen offers expert evaluation and treatment for depression in a supportive and confidential environment.</p>
                     </div>
 
                     <p>If you or a loved one is struggling with depression, please call <strong>(385) 504-1334</strong> or <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">schedule an appointment online</a> today. We are here to help you rediscover hope and well-being.</p>
 
-                    <h2>Understanding Depression</h2>
-                    <h3>What is Depression?</h3>
+                    <h3>Understanding Depression</h3>
+                    <h4>What is Depression?</h4>
                     <p>Depression is more than just feeling sad; it's a persistent medical condition that affects your mood, thoughts, and daily activities. Major depressive disorder is characterized by a persistent feeling of sadness and loss of interest that can interfere with daily functioning. It's important to understand that depression is a treatable medical condition, not a personal weakness or character flaw.</p>
 
                     <div class="clinical-summary">
