--- a/index.html
+++ b/index.html
@@ -417,16 +417,16 @@
                         <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo" width="200" height="60" loading="eager" fetchpriority="high">
                     </a>
                 </div>
-                <nav class="main-nav">
+                <nav class="main-nav" aria-label="Main navigation">
                     <ul class="nav-items">
                         <li><a href="/" class="active">Home</a></li>
                         <li class="dropdown">
-                            <a href="/#services">Services</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/adhd">ADHD Testing & Treatment</a></li>
-                                <li><a href="/anxiety">Anxiety Treatment</a></li>
-                                <li><a href="/depression">Depression Treatment</a></li>
-                                <li><a href="/ptsd">PTSD Treatment</a></li>
+                            <a href="/#services" aria-haspopup="true" aria-expanded="false">Services</a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li role="menuitem"><a href="/adhd">ADHD Testing & Treatment</a></li>
+                                <li role="menuitem"><a href="/anxiety">Anxiety Treatment</a></li>
+                                <li role="menuitem"><a href="/depression">Depression Treatment</a></li>
+                                <li role="menuitem"><a href="/ptsd">PTSD Treatment</a></li>
                             </ul>
                         </li>
                         <li><a href="/provo">Provo Office</a></li>
@@ -436,9 +436,9 @@
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
                     </ul>
                 </nav>
-                <div class="hamburger-menu">
-                    <i class="fa fa-bars"></i>
-                </div>
+                <button class="hamburger-menu" aria-label="Toggle mobile menu" aria-expanded="false" type="button">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </button>
             </div>
         </div>
     </header>
@@ -460,14 +460,14 @@
     <section id="services" class="page-content">
         <div class="container">
             <div class="page-header">
-                <h1>Our Services</h1>
+                <h2>Our Services</h2>
                 <p>Allen Psychiatry offers comprehensive mental health services tailored to your individual needs. Our experienced team provides evidence-based treatment in a supportive, confidential environment.</p>
             </div>
 
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-img">
-                        <img src="assets/adhd2.jpg" alt="ADHD Treatment" loading="lazy" width="330" height="220">
+                        <img src="assets/adhd2.jpg" alt="Professional ADHD evaluation and treatment services for adults at Allen Psychiatry" loading="lazy" width="330" height="220">
                     </div>
                     <div class="service-content">
                         <h3>ADHD Testing & Treatment</h3>
@@ -478,7 +478,7 @@
 
                 <div class="service-card">
                     <div class="service-img">
-                        <img src="assets/anxiety2.jpg" alt="Anxiety Treatment" loading="lazy" width="330" height="220">
+                        <img src="assets/anxiety2.jpg" alt="Evidence-based anxiety treatment and medication management at Allen Psychiatry" loading="lazy" width="330" height="220">
                     </div>
                     <div class="service-content">
                         <h3>Anxiety Treatment</h3>
@@ -489,7 +489,7 @@
 
                 <div class="service-card">
                     <div class="service-img">
-                        <img src="assets/depression.jpg" alt="Depression Treatment" loading="lazy" width="330" height="220">
+                        <img src="assets/depression.jpg" alt="Compassionate depression treatment and medication management at Allen Psychiatry" loading="lazy" width="330" height="220">
                     </div>
                     <div class="service-content">
                         <h3>Depression Treatment</h3>
@@ -500,7 +500,7 @@
 
                 <div class="service-card">
                     <div class="service-img">
-                        <img src="assets/ptsd.jpg" alt="PTSD Treatment" loading="lazy" width="330" height="220">
+                        <img src="assets/ptsd.jpg" alt="Specialized PTSD treatment and trauma-informed therapy at Allen Psychiatry" loading="lazy" width="330" height="220">
                     </div>
                     <div class="service-content">
                         <h3>PTSD Treatment</h3>
