--- a/ptsd.html
+++ b/ptsd.html
@@ -216,16 +216,16 @@
                         <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
                     </a>
                 </div>
-                <nav class="main-nav">
+                <nav class="main-nav" aria-label="Main navigation">
                     <ul class="nav-items">
                         <li><a href="/">Home</a></li>
                         <li class="dropdown">
-                            <a href="/#services" class="active">Services</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/adhd">ADHD Testing & Treatment</a></li>
-                                <li><a href="/anxiety">Anxiety Treatment</a></li>
-                                <li><a href="/depression">Depression Treatment</a></li>
-                                <li><a href="/ptsd">PTSD Treatment</a></li>
+                            <a href="/#services" class="active" aria-haspopup="true" aria-expanded="false">Services</a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li role="menuitem"><a href="/adhd">ADHD Testing & Treatment</a></li>
+                                <li role="menuitem"><a href="/anxiety">Anxiety Treatment</a></li>
+                                <li role="menuitem"><a href="/depression">Depression Treatment</a></li>
+                                <li role="menuitem"><a href="/ptsd">PTSD Treatment</a></li>
                             </ul>
                         </li>
                         <li><a href="/provo">Provo Office</a></li>
@@ -235,9 +235,9 @@
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
                     </ul>
                 </nav>
-                <div class="hamburger-menu">
-                    <i class="fa fa-bars"></i>
-                </div>
+                <button class="hamburger-menu" aria-label="Toggle mobile menu" aria-expanded="false" type="button">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </button>
             </div>
         </div>
     </header>
@@ -254,7 +254,7 @@
 
     <!-- PTSD Hero Section -->
     <section class="service-hero">
-        <img src="assets/ptsd.jpg" alt="Abstract image representing ptsd" class="hero-image">
+        <img src="assets/ptsd.jpg" alt="Trauma-informed PTSD therapy and support services at Allen Psychiatry in Provo, Utah" class="hero-image">
         <div class="container">
             <h1>PTSD Treatment</h1>
             <p>Specialized care for trauma survivors</p>
@@ -266,7 +266,7 @@
             <div class="container">
                 <div class="service-content">
                     <div class="clinical-callout">
-                        <h4>Professional PTSD Treatment in Provo, Utah</h4>
+                        <h2>Professional PTSD Treatment in Provo, Utah</h2>
                         <p>Life can be profoundly challenging, often bringing unexpected hardships that leave lasting emotional scars. If you or someone you care about is struggling with Post-Traumatic Stress Disorder (PTSD), please know that you are not alone on this journey.</p>
                     </div>
                     
@@ -274,7 +274,7 @@
                     
                     <p>If you want to learn more about treatment for PTSD, please call <strong>(385) 504-1334</strong> or <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">schedule an appointment online</a> today.</p>
 
-                    <h2>Understanding PTSD</h2>
+                    <h3>Understanding PTSD</h3>
                     <h3>What is PTSD?</h3>
                     <p>Post-Traumatic Stress Disorder (PTSD) is a mental health condition triggered by experiencing or witnessing a traumatic event. It can cause significant distress and interfere with daily life. PTSD is a natural response to trauma, but when symptoms persist and interfere with functioning, professional treatment becomes essential for recovery.</p>
 
