--- a/rural.html
+++ b/rural.html
@@ -107,16 +107,16 @@
                         <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
                     </a>
                 </div>
-                <nav class="main-nav">
+                <nav class="main-nav" aria-label="Main navigation">
                     <ul class="nav-items">
                         <li><a href="/">Home</a></li>
                         <li class="dropdown">
-                            <a href="/#services">Services</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/adhd">ADHD Testing & Treatment</a></li>
-                                <li><a href="/anxiety">Anxiety Treatment</a></li>
-                                <li><a href="/depression">Depression Treatment</a></li>
-                                <li><a href="/ptsd">PTSD Treatment</a></li>
+                            <a href="/#services" aria-haspopup="true" aria-expanded="false">Services</a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li role="menuitem"><a href="/adhd">ADHD Testing & Treatment</a></li>
+                                <li role="menuitem"><a href="/anxiety">Anxiety Treatment</a></li>
+                                <li role="menuitem"><a href="/depression">Depression Treatment</a></li>
+                                <li role="menuitem"><a href="/ptsd">PTSD Treatment</a></li>
                             </ul>
                         </li>
                         <li><a href="/provo">Provo Office</a></li>
@@ -126,9 +126,9 @@
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
                     </ul>
                 </nav>
-                <div class="hamburger-menu">
-                    <i class="fa fa-bars"></i>
-                </div>
+                <button class="hamburger-menu" aria-label="Toggle mobile menu" aria-expanded="false" type="button">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </button>
             </div>
         </div>
     </header>
