--- a/about.html
+++ b/about.html
@@ -169,7 +169,7 @@
             </div>
 
             <!-- Schedule Appointment Section -->
-            <div class="schedule-appointment-section" style="text-align: center; padding: 60px 0; background: linear-gradient(135deg, var(--primary) 0%, var(--primary-light) 100%); margin: 60px 0; border-radius: var(--border-radius);">
+            <div class="schedule-appointment-section">
                 <div class="container">
                     <h2 style="color: var(--light); margin-bottom: 20px;">Serving Utah County and Rural Utah</h2>
                     <p style="color: var(--light); margin-bottom: 30px; max-width: 700px; margin-left: auto; margin-right: auto;">Dr. Allen is committed to providing accessible mental health care throughout Utah County and rural communities.</p>
