--- a/index.html
+++ b/index.html
@@ -465,60 +465,60 @@
             </div>
 
             <div class="services-grid">
-                <div class="service-card">
-                    <div class="service-img">
+                <a href="/adhd" class="service-card">
+                    <div class="service-img" data-service-name="ADHD Testing & Treatment">
                         <img src="assets/adhd2.jpg" alt="Professional ADHD evaluation and treatment services for adults at Allen Psychiatry" loading="lazy" width="330" height="220">
                     </div>
                     <div class="service-content">
                         <h3>ADHD Testing & Treatment</h3>
                         <p>Comprehensive evaluation and management of ADHD for adults, with personalized treatment plans to help you regain focus and control in your daily life.</p>
-                        <a href="/adhd" class="btn">Learn More About ADHD Treatment</a>
+                        <span class="btn">Learn More About ADHD Treatment</span>
                     </div>
-                </div>
+                </a>
 
-                <div class="service-card">
-                    <div class="service-img">
+                <a href="/anxiety" class="service-card">
+                    <div class="service-img" data-service-name="Anxiety Treatment">
                         <img src="assets/anxiety2.jpg" alt="Evidence-based anxiety treatment and medication management at Allen Psychiatry" loading="lazy" width="330" height="220">
                     </div>
                     <div class="service-content">
                         <h3>Anxiety Treatment</h3>
                         <p>Evidence-based approaches to managing anxiety, including medication management and therapeutic techniques to reduce symptoms and improve quality of life.</p>
-                        <a href="/anxiety" class="btn">Learn More About Anxiety Treatment</a>
+                        <span class="btn">Learn More About Anxiety Treatment</span>
                     </div>
-                </div>
+                </a>
 
-                <div class="service-card">
-                    <div class="service-img">
+                <a href="/depression" class="service-card">
+                    <div class="service-img" data-service-name="Depression Treatment">
                         <img src="assets/depression.jpg" alt="Compassionate depression treatment and medication management at Allen Psychiatry" loading="lazy" width="330" height="220">
                     </div>
                     <div class="service-content">
                         <h3>Depression Treatment</h3>
                         <p>Personalized care for those experiencing depression, with a focus on restoring hope and improving overall well-being through effective, compassionate treatment.</p>
-                        <a href="/depression" class="btn">Learn More About Depression Treatment</a>
+                        <span class="btn">Learn More About Depression Treatment</span>
                     </div>
-                </div>
+                </a>
 
-                <div class="service-card">
-                    <div class="service-img">
+                <a href="/ptsd" class="service-card">
+                    <div class="service-img" data-service-name="PTSD Treatment">
                         <img src="assets/ptsd.jpg" alt="Specialized PTSD treatment and trauma-informed therapy at Allen Psychiatry" loading="lazy" width="330" height="220">
                     </div>
                     <div class="service-content">
                         <h3>PTSD Treatment</h3>
                         <p>Specialized care for trauma survivors, including medication management and evidence-based therapeutic approaches to help you reclaim your life and find peace.</p>
-                        <a href="/ptsd" class="btn">Learn More About PTSD Treatment</a>
+                        <span class="btn">Learn More About PTSD Treatment</span>
                     </div>
-                </div>
+                </a>
             </div>
 
             <!-- Service Area Section -->
-            <div class="service-area-section" style="margin: 60px 0; padding: 40px; background: var(--off-white); border-radius: var(--border-radius);">
-                <h2 style="text-align: center; margin-bottom: 30px; color: var(--secondary);">Serving Utah County & Rural Utah Communities</h2>
-                <p style="text-align: center; margin-bottom: 40px; max-width: 800px; margin-left: auto; margin-right: auto;">Allen Psychiatry is committed to providing compassionate, personalized mental health care throughout Utah County and rural Utah communities. We recognize the vital importance of supporting the mental health needs of our rural communities and have a deep love and desire to serve them.</p>
+            <div class="service-area-section">
+                <h2>Serving Utah County & Rural Utah Communities</h2>
+                <p class="service-area-intro">Allen Psychiatry is committed to providing compassionate, personalized mental health care throughout Utah County and rural Utah communities. We recognize the vital importance of supporting the mental health needs of our rural communities and have a deep love and desire to serve them.</p>
                 
-                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; margin-top: 40px;">
-                    <div>
-                        <h3 style="color: var(--primary); margin-bottom: 15px;">Utah County Cities</h3>
-                        <ul style="list-style: none; padding: 0;">
+                <div class="service-area-grid">
+                    <div class="service-area-column">
+                        <h3>Utah County Cities</h3>
+                        <ul>
                             <li>Provo</li>
                             <li>Orem</li>
                             <li>Lehi</li>
@@ -538,9 +538,9 @@
                             <li>Cedar Hills</li>
                         </ul>
                     </div>
-                    <div>
-                        <h3 style="color: var(--primary); margin-bottom: 15px;">Sevier County & Rural Communities</h3>
-                        <ul style="list-style: none; padding: 0;">
+                    <div class="service-area-column">
+                        <h3>Sevier County & Rural Communities</h3>
+                        <ul>
                             <li>Richfield</li>
                             <li>Monroe</li>
                             <li>Salina</li>
@@ -554,11 +554,11 @@
                             <li>Annabella</li>
                             <li>Joseph</li>
                         </ul>
-                        <p style="margin-top: 20px; font-size: 0.95em; color: var(--mid-gray);">Telehealth appointments available for rural communities</p>
+                        <p class="service-area-note">Telehealth appointments available for rural communities</p>
                     </div>
-                    <div>
-                        <h3 style="color: var(--primary); margin-bottom: 15px;">Additional Service Areas</h3>
-                        <ul style="list-style: none; padding: 0;">
+                    <div class="service-area-column">
+                        <h3>Additional Service Areas</h3>
+                        <ul>
                             <li>Genola</li>
                             <li>Elk Ridge</li>
                             <li>Woodland Hills</li>
@@ -575,10 +575,10 @@
                     </div>
                 </div>
                 
-                <div style="text-align: center; margin-top: 40px; padding-top: 30px; border-top: 1px solid var(--light-gray);">
-                    <p style="margin-bottom: 20px;"><strong>Looking for psychiatric services in your area?</strong></p>
+                <div class="service-area-cta">
+                    <p class="service-area-cta-title"><strong>Looking for psychiatric services in your area?</strong></p>
                     <p>Whether you're in Provo, Orem, Lehi, Spanish Fork, American Fork, Springville, or any rural Utah community, we're here to help. Our Provo office is easily accessible, and we offer telehealth appointments for your convenience.</p>
-                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank" style="margin-top: 20px;">Schedule Your Appointment</a>
+                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank">Schedule Your Appointment</a>
                 </div>
             </div>
 
