Fix: Add script.js to index.html and fix GA4 config - enable page_view tracking

--- a/index.html
+++ b/index.html
@@ -756,6 +756,7 @@
         </div>
     </div>
 
+    <script src="script.js"></script>
     <script src="navigation.js"></script>
     <script src="telehealth-modal.js"></script>
     <script src="patient-portal-modal.js"></script>
