Add GA4 event tracking to ALL schedule buttons and phone numbers site-wide - complete coverage

--- a/rural.html
+++ b/rural.html
@@ -284,7 +284,7 @@
                         <li><a href="/#services">Services</a></li>
                         <li><a href="/provo">Provo Office</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
-                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">Schedule Appointment</a></li>
+                        <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Footer', 'value': 1});">Schedule Appointment</a></li>
                     </ul>
                 </div>
 
@@ -298,7 +298,7 @@
                     </p>
                     <p>
                         <strong>Phone:</strong><br>
-                        (385) 504-1334
+                        <a href="tel:+13855041334" onclick="gtag('event', 'phone_call_click', {'event_category': 'Conversion', 'event_label': 'Phone Call - Footer', 'value': 1});" style="color: inherit; text-decoration: none;">(385) 504-1334</a>
                     </p>
                     <p>
                         <strong>Email:</strong><br>
