--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
                 <p>We're sorry, but the page you're looking for doesn't exist or has been moved.</p>
                 <div class="cta-buttons">
                     <a href="index" class="btn">Return Home</a>
-                    <a href="tel:3855041334" class="btn btn-secondary">Call Us</a>
+                    <a href="tel:+13855041334" class="btn btn-secondary" onclick="gtag('event', 'phone_call_click', {'event_category': 'Conversion', 'event_label': 'Phone Call - 404 Page', 'value': 1});">Call Us</a>
                 </div>
             </div>
         </div>
