--- a/adhd.html
+++ b/adhd.html
@@ -296,7 +296,7 @@
                         <p>Welcome to Allen Psychiatry in Provo, UT, your foremost healthcare provider dedicated to helping individuals with ADHD. We understand that ADHD can seem daunting, and we are here to provide comprehensive, personalized care that addresses all aspects of the disorder.</p>
                     </div>
                     
-                    <p>If you or a loved one is suffering from ADHD, give our office a call today to learn how we can help you. Please call <strong>(385) 504-1334</strong> or <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">book an appointment online</a> today. We are ready to find a solution for you.</p>
+                    <p>If you or a loved one is suffering from ADHD, give our office a call today to learn how we can help you. Please call <strong><a href="tel:+13855041334" onclick="gtag('event', 'phone_call_click', {'event_category': 'Conversion', 'event_label': 'Phone Call - Inline Text', 'value': 1});" style="color: inherit; text-decoration: none;">(385) 504-1334</a></strong> or <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Link - Inline Text', 'value': 1});">book an appointment online</a> today. We are ready to find a solution for you.</p>
                     
                     <h3>Understanding ADHD</h3>
                     <h4>What is ADHD?</h4>
@@ -413,7 +413,7 @@
                     </p>
                     <p>
                         <strong>Phone:</strong><br>
-                        (385) 504-1334
+                        <a href="tel:+13855041334" onclick="gtag('event', 'phone_call_click', {'event_category': 'Conversion', 'event_label': 'Phone Call - Footer', 'value': 1});" style="color: inherit; text-decoration: none;">(385) 504-1334</a>
                     </p>
                     <p>
                         <strong>Email:</strong><br>
