--- a/depression.html
+++ b/depression.html
@@ -271,7 +271,7 @@
                         <p>Depression can feel overwhelming, but you don't have to go through it alone. Dr. Todd Allen offers expert evaluation and treatment for depression in a supportive and confidential environment.</p>
                     </div>
 
-                    <p>If you or a loved one is struggling with depression, please call <strong>(385) 504-1334</strong> or <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">schedule an appointment online</a> today. We are here to help you rediscover hope and well-being.</p>
+                    <p>If you or a loved one is struggling with depression, please call <strong><a href="tel:+13855041334" onclick="gtag('event', 'phone_call_click', {'event_category': 'Conversion', 'event_label': 'Phone Call - Inline Text', 'value': 1});" style="color: inherit; text-decoration: none;">(385) 504-1334</a></strong> or <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Link - Inline Text', 'value': 1});">schedule an appointment online</a> today. We are here to help you rediscover hope and well-being.</p>
 
                     <h3>Understanding Depression</h3>
                     <h4>What is Depression?</h4>
@@ -361,7 +361,7 @@
                         
                         <h3>Convenient Provo Location:</h3>
                         <p><strong>Address:</strong> 3311 North University Ave, Suite 275, Provo, UT 84604<br>
-                        <strong>Phone:</strong> <a href="tel:+13855041334">(385) 504-1334</a><br>
+                        <strong>Phone:</strong> <a href="tel:+13855041334" onclick="gtag('event', 'phone_call_click', {'event_category': 'Conversion', 'event_label': 'Phone Call - Footer', 'value': 1});">(385) 504-1334</a><br>
                         <strong>Parking:</strong> Free parking available on-site</p>
                         
                         <p>Whether you're looking for depression treatment in Provo, depression therapy in Orem, or depression care in Lehi, Allen Psychiatry is here to help. <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank">Schedule your appointment today</a>.</p>
@@ -423,7 +423,7 @@
                     </p>
                     <p>
                         <strong>Phone:</strong><br>
-                        (385) 504-1334
+                        <a href="tel:+13855041334" onclick="gtag('event', 'phone_call_click', {'event_category': 'Conversion', 'event_label': 'Phone Call - Footer', 'value': 1});" style="color: inherit; text-decoration: none;">(385) 504-1334</a>
                     </p>
                     <p>
                         <strong>Email:</strong><br>
