Complete image optimization: compress JPEG/PNG, add WebP/AVIF formats, update HTML with picture elements

--- a/about.html
+++ b/about.html
@@ -48,7 +48,11 @@
             <div class="container">
                 <div class="logo">
                     <a href="/">
-                        <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
+                        <picture>
+                            <source srcset="assets/ap-new-color-logo.avif" type="image/avif">
+                            <source srcset="assets/ap-new-color-logo.webp" type="image/webp">
+                            <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
+                        </picture>
                     </a>
                 </div>
                 <nav class="main-nav" aria-label="Main navigation">
@@ -94,7 +98,11 @@
             <!-- Doctor Introduction -->
             <div class="about-intro">
                 <div class="about-image-large">
-                    <img src="assets/Dr Todd Allen.jpg" alt="Dr. Todd Allen">
+                    <picture>
+                        <source srcset="assets/Dr Todd Allen.avif" type="image/avif">
+                        <source srcset="assets/Dr Todd Allen.webp" type="image/webp">
+                        <img src="assets/Dr Todd Allen.jpg" alt="Dr. Todd Allen">
+                    </picture>
                 </div>
                 <div class="about-intro-text">
                     <h2>Dr. Todd Allen, DNP, PMHNP-BC</h2>
