--- a/depression.html
+++ b/depression.html
@@ -213,7 +213,11 @@
             <div class="container">
                 <div class="logo">
                     <a href="/">
-                        <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
+                        <picture>
+                            <source srcset="assets/ap-new-color-logo.avif" type="image/avif">
+                            <source srcset="assets/ap-new-color-logo.webp" type="image/webp">
+                            <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
+                        </picture>
                     </a>
                 </div>
                 <nav class="main-nav" aria-label="Main navigation">
@@ -254,7 +258,11 @@
 
     <!-- Service Hero Section -->
     <section class="service-hero">
-        <img src="assets/depression.jpg" alt="Supportive depression treatment and mental health care at Allen Psychiatry in Provo, Utah" class="hero-image">
+        <picture>
+            <source srcset="assets/depression.avif" type="image/avif">
+            <source srcset="assets/depression.webp" type="image/webp">
+            <img src="assets/depression.jpg" alt="Supportive depression treatment and mental health care at Allen Psychiatry in Provo, Utah" class="hero-image">
+        </picture>
         <div class="container">
             <h1>Depression Treatment</h1>
             <p>Compassionate care to help you find hope and healing</p>
