--- a/index.html
+++ b/index.html
@@ -414,7 +414,11 @@
             <div class="container">
                 <div class="logo">
                     <a href="/">
-                        <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo" width="200" height="60" loading="eager" fetchpriority="high">
+                        <picture>
+                            <source srcset="assets/ap-new-color-logo.avif" type="image/avif">
+                            <source srcset="assets/ap-new-color-logo.webp" type="image/webp">
+                            <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo" width="200" height="60" loading="eager" fetchpriority="high">
+                        </picture>
                     </a>
                 </div>
                 <nav class="main-nav" aria-label="Main navigation">
@@ -446,7 +450,11 @@
     <main>
     <!-- Hero Section -->
     <section class="hero">
-                        <img src="assets/index-hero.jpg" alt="Family playing in their backyard" class="hero-image" loading="eager" width="1920" height="1080" fetchpriority="high">
+                        <picture>
+                            <source srcset="assets/index-hero.avif" type="image/avif">
+                            <source srcset="assets/index-hero.webp" type="image/webp">
+                            <img src="assets/index-hero.jpg" alt="Family playing in their backyard" class="hero-image" loading="eager" width="1920" height="1080" fetchpriority="high">
+                        </picture>
         <div class="container">
             <div class="hero-content">
                 <h1>Expert Psychiatric Care in Utah County</h1>
@@ -467,7 +475,11 @@
             <div class="services-grid">
                 <a href="/adhd" class="service-card">
                     <div class="service-img" data-service-name="ADHD Testing & Treatment">
-                        <img src="assets/adhd2.jpg" alt="Professional ADHD evaluation and treatment services for adults at Allen Psychiatry" loading="lazy" width="330" height="220">
+                        <picture>
+                            <source srcset="assets/adhd2.avif" type="image/avif">
+                            <source srcset="assets/adhd2.webp" type="image/webp">
+                            <img src="assets/adhd2.jpg" alt="Professional ADHD evaluation and treatment services for adults at Allen Psychiatry" loading="lazy" width="330" height="220">
+                        </picture>
                     </div>
                     <div class="service-content">
                         <h3>ADHD Testing & Treatment</h3>
@@ -478,7 +490,11 @@
 
                 <a href="/anxiety" class="service-card">
                     <div class="service-img" data-service-name="Anxiety Treatment">
-                        <img src="assets/anxiety2.jpg" alt="Evidence-based anxiety treatment and medication management at Allen Psychiatry" loading="lazy" width="330" height="220">
+                        <picture>
+                            <source srcset="assets/anxiety2.avif" type="image/avif">
+                            <source srcset="assets/anxiety2.webp" type="image/webp">
+                            <img src="assets/anxiety2.jpg" alt="Evidence-based anxiety treatment and medication management at Allen Psychiatry" loading="lazy" width="330" height="220">
+                        </picture>
                     </div>
                     <div class="service-content">
                         <h3>Anxiety Treatment</h3>
@@ -489,7 +505,11 @@
 
                 <a href="/depression" class="service-card">
                     <div class="service-img" data-service-name="Depression Treatment">
-                        <img src="assets/depression.jpg" alt="Compassionate depression treatment and medication management at Allen Psychiatry" loading="lazy" width="330" height="220">
+                        <picture>
+                            <source srcset="assets/depression.avif" type="image/avif">
+                            <source srcset="assets/depression.webp" type="image/webp">
+                            <img src="assets/depression.jpg" alt="Compassionate depression treatment and medication management at Allen Psychiatry" loading="lazy" width="330" height="220">
+                        </picture>
                     </div>
                     <div class="service-content">
                         <h3>Depression Treatment</h3>
@@ -500,7 +520,11 @@
 
                 <a href="/ptsd" class="service-card">
                     <div class="service-img" data-service-name="PTSD Treatment">
-                        <img src="assets/ptsd.jpg" alt="Specialized PTSD treatment and trauma-informed therapy at Allen Psychiatry" loading="lazy" width="330" height="220">
+                        <picture>
+                            <source srcset="assets/ptsd.avif" type="image/avif">
+                            <source srcset="assets/ptsd.webp" type="image/webp">
+                            <img src="assets/ptsd.jpg" alt="Specialized PTSD treatment and trauma-informed therapy at Allen Psychiatry" loading="lazy" width="330" height="220">
+                        </picture>
                     </div>
                     <div class="service-content">
                         <h3>PTSD Treatment</h3>
