--- a/rural.html
+++ b/rural.html
@@ -104,7 +104,11 @@
             <div class="container">
                 <div class="logo">
                     <a href="/">
-                        <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
+                        <picture>
+                            <source srcset="assets/ap-new-color-logo.avif" type="image/avif">
+                            <source srcset="assets/ap-new-color-logo.webp" type="image/webp">
+                            <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
+                        </picture>
                     </a>
                 </div>
                 <nav class="main-nav" aria-label="Main navigation">
@@ -145,7 +149,11 @@
 
     <!-- Service Hero Section -->
     <section class="service-hero">
-        <img src="assets/Rural Sevier County Sunset.jpg" alt="A sunset over a rural county, representing rural services" class="hero-image">
+        <picture>
+            <source srcset="assets/Rural Sevier County Sunset.avif" type="image/avif">
+            <source srcset="assets/Rural Sevier County Sunset.webp" type="image/webp">
+            <img src="assets/Rural Sevier County Sunset.jpg" alt="A sunset over a rural county, representing rural services" class="hero-image">
+        </picture>
         <div class="container">
             <h1>Mental Health Services for Rural Utah</h1>
             <p>Bringing compassionate psychiatric care to Utah's rural communities</p>
