--- a/adhd.html
+++ b/adhd.html
@@ -238,7 +238,11 @@
             <div class="container">
                 <div class="logo">
                     <a href="/">
-                        <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
+                        <picture>
+                            <source srcset="assets/ap-new-color-logo.avif" type="image/avif">
+                            <source srcset="assets/ap-new-color-logo.webp" type="image/webp">
+                            <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
+                        </picture>
                     </a>
                 </div>
                 <nav class="main-nav" aria-label="Main navigation">
@@ -280,7 +284,11 @@
 
     <!-- Service Hero Section -->
     <section class="service-hero">
-        <img src="assets/adhd2.jpg" alt="Professional ADHD evaluation and treatment consultation at Allen Psychiatry in Provo, Utah" class="hero-image">
+        <picture>
+            <source srcset="assets/adhd2.avif" type="image/avif">
+            <source srcset="assets/adhd2.webp" type="image/webp">
+            <img src="assets/adhd2.jpg" alt="Professional ADHD evaluation and treatment consultation at Allen Psychiatry in Provo, Utah" class="hero-image">
+        </picture>
         <div class="container">
             <h1>ADHD Testing & Treatment</h1>
             <p>Comprehensive care for adults and adolescents</p>
