--- a/anxiety.html
+++ b/anxiety.html
@@ -209,7 +209,11 @@
             <div class="container">
                 <div class="logo">
                     <a href="/">
-                        <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
+                        <picture>
+                            <source srcset="assets/ap-new-color-logo.avif" type="image/avif">
+                            <source srcset="assets/ap-new-color-logo.webp" type="image/webp">
+                            <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
+                        </picture>
                     </a>
                 </div>
                 <nav class="main-nav" aria-label="Main navigation">
@@ -250,7 +254,11 @@
 
     <!-- Service Hero Section -->
     <section class="service-hero">
-        <img src="assets/anxiety2.jpg" alt="Therapeutic session for anxiety treatment at Allen Psychiatry in Provo, Utah" class="hero-image">
+        <picture>
+            <source srcset="assets/anxiety2.avif" type="image/avif">
+            <source srcset="assets/anxiety2.webp" type="image/webp">
+            <img src="assets/anxiety2.jpg" alt="Therapeutic session for anxiety treatment at Allen Psychiatry in Provo, Utah" class="hero-image">
+        </picture>
         <div class="container">
             <h1>Anxiety Treatment</h1>
             <p>Expert care for anxiety, panic attacks, and related conditions</p>
