--- a/provo.html
+++ b/provo.html
@@ -47,7 +47,11 @@
             <div class="container">
                 <div class="logo">
                     <a href="/">
-                        <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
+                        <picture>
+                            <source srcset="assets/ap-new-color-logo.avif" type="image/avif">
+                            <source srcset="assets/ap-new-color-logo.webp" type="image/webp">
+                            <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
+                        </picture>
                     </a>
                 </div>
                 <nav class="main-nav" aria-label="Main navigation">
@@ -135,13 +139,25 @@
         <div class="container">
             <div class="photo-grid">
                 <div class="photo-item">
-                    <img src="assets/Provo Office 1.jpg" alt="Welcoming Reception Area" class="placeholder-img">
+                    <picture>
+                        <source srcset="assets/Provo Office 1.avif" type="image/avif">
+                        <source srcset="assets/Provo Office 1.webp" type="image/webp">
+                        <img src="assets/Provo Office 1.jpg" alt="Welcoming Reception Area" class="placeholder-img">
+                    </picture>
                 </div>
                 <div class="photo-item">
-                    <img src="assets/Provo Office 2.jpg" alt="Comfortable Waiting Area" class="placeholder-img">
+                    <picture>
+                        <source srcset="assets/Provo Office 2.avif" type="image/avif">
+                        <source srcset="assets/Provo Office 2.webp" type="image/webp">
+                        <img src="assets/Provo Office 2.jpg" alt="Comfortable Waiting Area" class="placeholder-img">
+                    </picture>
                 </div>
                 <div class="photo-item">
-                    <img src="assets/Provo Office 3.jpg" alt="Private Consultation Room" class="placeholder-img">
+                    <picture>
+                        <source srcset="assets/Provo Office 3.avif" type="image/avif">
+                        <source srcset="assets/Provo Office 3.webp" type="image/webp">
+                        <img src="assets/Provo Office 3.jpg" alt="Private Consultation Room" class="placeholder-img">
+                    </picture>
                 </div>
             </div>
         </div>
