--- a/ptsd.html
+++ b/ptsd.html
@@ -213,7 +213,11 @@
             <div class="container">
                 <div class="logo">
                     <a href="/">
-                        <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
+                        <picture>
+                            <source srcset="assets/ap-new-color-logo.avif" type="image/avif">
+                            <source srcset="assets/ap-new-color-logo.webp" type="image/webp">
+                            <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
+                        </picture>
                     </a>
                 </div>
                 <nav class="main-nav" aria-label="Main navigation">
@@ -254,7 +258,11 @@
 
     <!-- PTSD Hero Section -->
     <section class="service-hero">
-        <img src="assets/ptsd.jpg" alt="Trauma-informed PTSD therapy and support services at Allen Psychiatry in Provo, Utah" class="hero-image">
+        <picture>
+            <source srcset="assets/ptsd.avif" type="image/avif">
+            <source srcset="assets/ptsd.webp" type="image/webp">
+            <img src="assets/ptsd.jpg" alt="Trauma-informed PTSD therapy and support services at Allen Psychiatry in Provo, Utah" class="hero-image">
+        </picture>
         <div class="container">
             <h1>PTSD Treatment</h1>
             <p>Specialized care for trauma survivors</p>
