--- a/telehealth.html
+++ b/telehealth.html
@@ -50,7 +50,11 @@
         <div class="container">
           <div class="logo">
             <a href="/">
-              <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
+              <picture>
+                  <source srcset="assets/ap-new-color-logo.avif" type="image/avif">
+                  <source srcset="assets/ap-new-color-logo.webp" type="image/webp">
+                  <img src="assets/ap-new-color-logo.png" alt="Allen Psychiatry logo">
+              </picture>
             </a>
           </div>
           <nav class="main-nav" aria-label="Main navigation">
@@ -90,7 +94,11 @@
 
     <main>
       <section class="service-hero">
-        <img src="assets/telehealth snowy-winter-landscape.jpg" alt="A snowy landscape representing telehealth services" class="hero-image">
+        <picture>
+            <source srcset="assets/telehealth snowy-winter-landscape.avif" type="image/avif">
+            <source srcset="assets/telehealth snowy-winter-landscape.webp" type="image/webp">
+            <img src="assets/telehealth snowy-winter-landscape.jpg" alt="A snowy landscape representing telehealth services" class="hero-image">
+        </picture>
         <div class="container">
           <h1>TeleHealth Services</h1>
           <p>Convenient and confidential mental health care from anywhere</p>
