Major cleanup: organize codebase, remove duplicates, standardize SMS modal, move dev scripts and docs to organized folders

--- a/about.html
+++ b/about.html
@@ -261,6 +261,6 @@
         <script src="navigation.js"></script>
     <script src="telehealth-modal.js"></script>
     <script src="patient-portal-modal.js"></script>
-    <script src="sms-privacy-modal.js"></script>
+    <script src="sms-modal-simple.js"></script>
 </body>
 </html> 
