--- a/depression.html
+++ b/depression.html
@@ -460,6 +460,6 @@
             <script src="navigation.js"></script>
     <script src="telehealth-modal.js"></script>
     <script src="patient-portal-modal.js"></script>
-    <script src="sms-privacy-modal.js"></script>
+    <script src="sms-modal-simple.js"></script>
 </body>
 </html> 
