--- a/provo.html
+++ b/provo.html
@@ -300,6 +300,6 @@
     <script src="read-more.js"></script>
     <script src="telehealth-modal.js"></script>
     <script src="patient-portal-modal.js"></script>
-    <script src="sms-privacy-modal.js"></script>
+    <script src="sms-modal-simple.js"></script>
 </body>
 </html> 
