--- a/rural.html
+++ b/rural.html
@@ -335,7 +335,7 @@
     <script src="navigation.js"></script>
     <script src="telehealth-modal.js"></script>
     <script src="patient-portal-modal.js"></script>
-    <script src="sms-privacy-modal.js"></script>
+    <script src="sms-modal-simple.js"></script>
     <script src="appointment-clarification-modal.js"></script>
 </body>
 </html> 
