feat: Add AI bot blocking and standardize CTA sections
- Add comprehensive AI bot blocking rules to robots.txt
- Add meta tags to index.html to block AI training crawlers
- Standardize CTA section structure across all pages
- Add container wrapper to match Telehealth page structure
- Fix closing tags in anxiety.html and depression.html
- Change div to section in about.html and index.html

Note: FAQ sections remain in dev branch for review

--- a/about.html
+++ b/about.html
@@ -99,9 +99,9 @@
             <div class="about-intro">
                 <div class="about-image-large">
                     <picture>
-                        <source srcset="assets/Dr Todd Allen.avif" type="image/avif">
-                        <source srcset="assets/Dr Todd Allen.webp" type="image/webp">
-                        <img src="assets/Dr Todd Allen.jpg" alt="Dr. Todd Allen">
+                        <source srcset="assets/Dr%20Todd%20Allen.avif" type="image/avif">
+                        <source srcset="assets/Dr%20Todd%20Allen.webp" type="image/webp">
+                        <img src="assets/Dr%20Todd%20Allen.jpg" alt="Dr. Todd Allen">
                     </picture>
                 </div>
                 <div class="about-intro-text">
@@ -186,13 +186,33 @@
             </div>
 
             <!-- Call to Action -->
-            <div class="cta-section">
-                <div class="cta-content">
-                    <h2>Ready to Take Your First Step?</h2>
-                    <p>If you're ready to begin your journey toward mental wellness with Dr. Todd Allen, we're here to help. Schedule a consultation to learn more about how we can support you.</p>
-                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - About', 'value': 1});">Schedule an Appointment</a>
+            <section class="cta-section">
+                <div class="container">
+                    <div class="cta-content">
+                        <h2>Ready to Take Your First Step?</h2>
+                        <p>If you're ready to begin your journey toward mental wellness with Dr. Todd Allen, we're here to help. Schedule a consultation to learn more about how we can support you.</p>
+                        <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - About', 'value': 1});">Schedule an Appointment</a>
+                    </div>
                 </div>
-            </div>
+            </section>
+
+            <!-- For Healthcare Providers Section -->
+            <section class="healthcare-providers page-content">
+                <div class="container">
+                    <h2>For Healthcare Providers & Community Organizations</h2>
+                    <p>Allen Psychiatry welcomes referrals from primary care physicians, therapists, counselors, and community organizations throughout Utah County and rural Utah.</p>
+                    <h3>Why Refer to Allen Psychiatry?</h3>
+                    <ul>
+                        <li>Board-certified psychiatric care</li>
+                        <li>Same-week appointments available</li>
+                        <li>Comprehensive evaluation and treatment</li>
+                        <li>Telehealth options for rural patients</li>
+                        <li>Collaborative care approach</li>
+                    </ul>
+                    <h3>Referral Process</h3>
+                    <p>To refer a patient, please call our office at <a href="tel:+13855041334">(385) 504-1334</a> or have your patient schedule directly through our online portal.</p>
+                </div>
+            </section>
         </div>
     </main>
 
