--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
+    <meta name="bingbot" content="index, follow">
+    <!-- Block AI training crawlers -->
+    <meta name="GPTBot" content="noindex, nofollow">
+    <meta name="ChatGPT-User" content="noindex, nofollow">
+    <meta name="Google-Extended" content="noindex, nofollow">
+    <meta name="anthropic-ai" content="noindex, nofollow">
+    <meta name="Claude-Web" content="noindex, nofollow">
+    <meta name="PerplexityBot" content="noindex, nofollow">
     <title>Allen Psychiatry | Compassionate Mental Health Care Provo & Rural Utah | Psychiatric Services</title>
     <meta name="description" content="Expert psychiatric services in Provo, Utah County & Sevier County. ADHD, anxiety, depression, PTSD treatment. Serving rural communities with telehealth. Board-certified psychiatrist. Call (385) 504-1334">
     <meta name="keywords" content="Allen Psychiatry, Allen Mental Health, Allen Psychiatric Services, Allen Mental Wellness, psychiatric services Provo, mental health care Utah County, psychiatrist Orem, mental health clinic near me, psychiatric services Lehi, mental health Spanish Fork, psychiatric care American Fork, mental wellness Springville, behavioral health Pleasant Grove, psychiatric services Payson, mental health Saratoga Springs, rural mental health Utah, telehealth psychiatry Utah, Sevier County psychiatric care, mental health treatment, psychiatric evaluation, mental wellness, behavioral health, holistic psychiatry, compassionate mental health care, mental health support, anxiety treatment, depression treatment, medication management, mental health counseling, psychiatric consultation, mental health professionals, local psychiatrist, Provo mental health, Orem mental health, Lehi mental health, Spanish Fork mental health, American Fork mental health, Springville mental health, Pleasant Grove mental health, Payson mental health, Saratoga Springs mental health, Eagle Mountain mental health, Lindon mental health, Mapleton mental health, Highland mental health, Alpine mental health, Salem mental health, Vineyard mental health, Cedar Hills mental health, Utah County psychiatric care, Sevier County psychiatric care">
@@ -559,13 +569,15 @@
                 </div>
             </div>
 
-            <div class="cta-section">
-                <div class="cta-content">
-                    <h2>Ready to Take Your First Step?</h2>
-                    <p>Mental health care is a journey, and we're here to walk alongside you every step of the way. Contact us today to schedule a consultation and begin your path to wellness.</p>
-                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Homepage CTA', 'value': 1});">Schedule an Appointment</a>
+            <section class="cta-section">
+                <div class="container">
+                    <div class="cta-content">
+                        <h2>Ready to Take Your First Step?</h2>
+                        <p>Mental health care is a journey, and we're here to walk alongside you every step of the way. Contact us today to schedule a consultation and begin your path to wellness.</p>
+                        <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Homepage CTA', 'value': 1});">Schedule an Appointment</a>
+                    </div>
                 </div>
-            </div>
+            </section>
         </div>
     </section>
     </main>
