--- a/depression.html
+++ b/depression.html
@@ -378,13 +378,14 @@
             </div>
         </section>
         <section class="cta-section">
-            <div class="cta-content">
-                <h2>Ready to Take Your First Step?</h2>
-                <p>If you're ready to begin your journey toward hope and healing, Dr. Allen is here to help. Schedule a consultation to learn more about how depression treatment can support you.</p>
-                <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Depression', 'value': 1});">Schedule an Appointment</a>
+            <div class="container">
+                <div class="cta-content">
+                    <h2>Ready to Take Your First Step?</h2>
+                    <p>If you're ready to begin your journey toward hope and healing, Dr. Allen is here to help. Schedule a consultation to learn more about how depression treatment can support you.</p>
+                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Depression', 'value': 1});">Schedule an Appointment</a>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
 </main>
 
     <!-- Footer -->
