--- a/ptsd.html
+++ b/ptsd.html
@@ -386,10 +386,12 @@
             </div>
         </section>
         <section class="cta-section">
-            <div class="cta-content">
-                <h2>Ready to Take Your First Step?</h2>
-                <p>If you're ready to begin your journey toward healing and recovery, Dr. Allen is here to help. Schedule a consultation to learn more about how PTSD treatment can support you.</p>
-                <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Ptsd', 'value': 1});">Schedule an Appointment</a>
+            <div class="container">
+                <div class="cta-content">
+                    <h2>Ready to Take Your First Step?</h2>
+                    <p>If you're ready to begin your journey toward healing and recovery, Dr. Allen is here to help. Schedule a consultation to learn more about how PTSD treatment can support you.</p>
+                    <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Ptsd', 'value': 1});">Schedule an Appointment</a>
+                </div>
             </div>
         </section>
     </main>
