fix: Move homepage CTA section outside services section
- CTA was nested inside #services section causing styling differences
- Moved to standalone section matching Telehealth page structure
- Ensures consistent CTA appearance across all pages

--- a/index.html
+++ b/index.html
@@ -568,16 +568,17 @@
                     </button>
                 </div>
             </div>
+        </div>
+    </section>
 
-            <section class="cta-section">
-                <div class="container">
-                    <div class="cta-content">
-                        <h2>Ready to Take Your First Step?</h2>
-                        <p>Mental health care is a journey, and we're here to walk alongside you every step of the way. Contact us today to schedule a consultation and begin your path to wellness.</p>
-                        <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Homepage CTA', 'value': 1});">Schedule an Appointment</a>
-                    </div>
-                </div>
-            </section>
+    <!-- CTA Section -->
+    <section class="cta-section">
+        <div class="container">
+            <div class="cta-content">
+                <h2>Ready to Take Your First Step?</h2>
+                <p>Mental health care is a journey, and we're here to walk alongside you every step of the way. Contact us today to schedule a consultation and begin your path to wellness.</p>
+                <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Homepage CTA', 'value': 1});">Schedule an Appointment</a>
+            </div>
         </div>
     </section>
     </main>
